test/testdata/variables/blank_access_error.lox
print _; // error: blank identifier _ cannot be used in a non-assignment expression
